--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -6,4 +6,18 @@
     android:layout_height="match_parent"
     tools:context="kr.ac.kw.coms.globealbum.GalleryActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button android:id="@+id/GalleryExit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cancel"
+            android:onClick="GalleryExit_click"/>
+    </LinearLayout>
+    <GridView android:id="@+id/GalleryGridView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+    </GridView>
 </android.support.constraint.ConstraintLayout>
