--- a/app/src/main/res/layout/inner_view.xml
+++ b/app/src/main/res/layout/inner_view.xml
@@ -3,4 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content"
+    android:scaleType="centerCrop"
+    android:layout_margin="1dp"
+    />
