delete marker all popupitem add and marker listener add

--- a/app/src/main/res/menu/marker_menu.xml
+++ b/app/src/main/res/menu/marker_menu.xml
@@ -4,4 +4,8 @@
         android:id="@+id/delete_marker"
         android:title="삭제">
     </item>
+    <item
+        android:id="@+id/delete_marker_all"
+        android:title="모두 삭제">
+    </item>
 </menu>
