--- a/app/src/main/res/layout/inner_view.xml
+++ b/app/src/main/res/layout/inner_view.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:scaleType="centerCrop"
+    android:scaleType="center"
     android:layout_margin="1dp"
+    android:clickable="true"
     />
