--- a/app/src/main/res/menu/marker_menu.xml
+++ b/app/src/main/res/menu/marker_menu.xml
@@ -2,8 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/delete_marker"
-        android:title="삭제">
-    </item>
+        android:title="삭제"></item>
     <item
         android:id="@+id/delete_marker_all"
         android:title="모두 삭제">
