--- a/app/src/main/res/layout/layout_gallerymenu.xml
+++ b/app/src/main/res/layout/layout_gallerymenu.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="#80000000"
     android:gravity="center">
-    <Button
-        android:id="@+id/deleteAll"
+    <android.support.constraint.Guideline
+        android:id="@+id/menuGuidelineUpper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="전체 삭제" />
-    <Button
-        android:id="@+id/sendFiles"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="결정"/>
-</LinearLayout>
+        app:layout_constraintGuide_percent="0.3"/>
+        <Button
+            android:id="@+id/deleteAll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="전체 삭제"
+            app:layout_constraintBottom_toBottomOf="@id/menuGuidelineUpper"/>
+        <Button
+            android:id="@+id/sendFiles"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="결정"
+            app:layout_constraintBottom_toBottomOf="@id/deleteAll"/>
+</android.support.constraint.ConstraintLayout>
