--- a/app/src/main/res/layout/activity_navigator.xml
+++ b/app/src/main/res/layout/activity_navigator.xml
@@ -4,18 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity_Navigator"
+    tools:context=".album.activity_Navigator"
     android:orientation="vertical">
 
     <LinearLayout android:id="@+id/MapLayout"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:orientation="vertical">
-        <kr.ac.kw.coms.globealbum.Map.MyMapView
+        <kr.ac.kw.coms.globealbum.map.MyMapView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        </kr.ac.kw.coms.globealbum.Map.MyMapView>
+        </kr.ac.kw.coms.globealbum.map.MyMapView>
     </LinearLayout>
     <View android:id="@+id/Divider"
         android:layout_width="match_parent"
