--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -14,7 +14,6 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.45">
-
             <kr.ac.kw.coms.globealbum.map.MyMapView
                 android:id="@+id/map"
                 android:layout_width="match_parent"
@@ -55,11 +54,21 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.55"
-            android:orientation="horizontal">
-            <Button
-                android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="3">
+            <ImageView
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:text="imageview1"/>
+                android:src="@drawable/eiffel"
+                android:layout_weight="1"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
         </LinearLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
