implement func key

--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -10,7 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#cfe"
+        android:background="#000000"
         app:layout_constraintBottom_toTopOf="@id/guide_top"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -18,7 +18,8 @@
             android:id="@+id/btn_back"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:src="@drawable/previous"
+            android:src="@drawable/arrow_left"
+            android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -29,7 +30,8 @@
             android:id="@+id/btn_detail"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:src="@drawable/moreinfo_arrow"
+            android:src="@drawable/detail"
+            android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintRight_toRightOf="parent"
@@ -51,6 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scrollbars="vertical"
+        android:background="#000000"
         app:layoutManager="android.support.v7.widget.GridLayoutManager"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
