--- a/app/src/main/res/layout/activity_gallery_detail.xml
+++ b/app/src/main/res/layout/activity_gallery_detail.xml
@@ -30,13 +30,15 @@
                     android:id="@+id/gallerydetail_btn_back"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:src="@drawable/previous"
+                    android:src="@drawable/arrow_left"
+                    android:padding="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     android:onClick="gallerydetail_onClick"/>
                 <TextView
+                    android:id="@+id/gallerydetail_imagename"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:text="IMAGE_NAME"
@@ -49,7 +51,8 @@
                     android:id="@+id/gallerydetail_btn_detail"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:src="@drawable/blank"
+                    android:src="@drawable/detail"
+                    android:padding="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintRight_toRightOf="parent"
