--- a/app/src/main/res/layout/inner_view.xml
+++ b/app/src/main/res/layout/inner_view.xml
@@ -4,7 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:scaleType="center"
+    android:scaleType="centerCrop"
     android:layout_margin="1dp"
     android:clickable="true"
+    android:background="#000000"
     />
