add login activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,12 @@
             android:text="Open Navigator"
             android:onClick="startOnClick"
             android:id="@+id/btn_start_navigator"/>
-
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="start Login"
+            android:onClick="startLogin"
+            android:id="@+id/btn_start_login"
+            />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
