--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,11 @@
             android:text="Open Navigator"
             android:onClick="startOnClick"
             android:id="@+id/btn_start_navigator"/>
-
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Open Diary"
+            android:onClick="startOnClick"
+            android:id="@+id/btn_start_diary"/>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
