--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -10,7 +10,9 @@
         android:id="@+id/diary_main_Toolbar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
             android:layout_width="50dp"
@@ -18,7 +20,8 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:scaleType="fitCenter"
-            android:src="@drawable/arrow_left" />
+            android:src="@drawable/arrow_left"
+            android:onClick="diary_onBackClick"/>
 
         <RadioGroup
             android:layout_width="wrap_content"
@@ -51,7 +54,10 @@
         android:layout_height="0dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar"></kr.ac.kw.coms.globealbum.album.GroupDiaryView>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar">
+
+    </kr.ac.kw.coms.globealbum.album.GroupDiaryView>
 
     <kr.ac.kw.coms.globealbum.album.GroupDiaryView
         android:id="@+id/diary_main_JourneyList"
@@ -59,6 +65,20 @@
         android:layout_height="0dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar"></kr.ac.kw.coms.globealbum.album.GroupDiaryView>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar">
+
+    </kr.ac.kw.coms.globealbum.album.GroupDiaryView>
+
+    <kr.ac.kw.coms.globealbum.album.GroupDiaryView
+        android:id="@+id/diary_main_Otherlist"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar">
+
+    </kr.ac.kw.coms.globealbum.album.GroupDiaryView>
 
 </android.support.constraint.ConstraintLayout>
