--- a/app/src/main/res/layout/activity_diary_map_n_pictures.xml
+++ b/app/src/main/res/layout/activity_diary_map_n_pictures.xml
@@ -6,23 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".diary.Diary_mapNPictures">
 
-    <kr.ac.kw.coms.globealbum.map.MyMapView
-        android:id="@+id/diary_mapNpics_Map"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/diary_mapNpics_MapFrame"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.45"
+        app:layout_constraintHeight_percent="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="20dp">
+        <TextView
+            android:id="@+id/diary_mapNpics_Title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Title"
+            android:textSize="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+        <kr.ac.kw.coms.globealbum.map.MyMapView
+            android:id="@+id/diary_mapNpics_Map"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Title"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    </android.support.constraint.ConstraintLayout>
 
-    </kr.ac.kw.coms.globealbum.map.MyMapView>
 
     <kr.ac.kw.coms.globealbum.album.GroupDiaryView
         android:id="@+id/diary_mapNpics_Pics"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.2"
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintHeight_percent="0.15"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Map">
+        app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_MapFrame">
 
     </kr.ac.kw.coms.globealbum.album.GroupDiaryView>
 
@@ -81,37 +98,52 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.35"
         app:layout_constraintLeft_toLeftOf="parent">
-
-        <TextView
-            android:id="@+id/diary_mapNpics_ReadTitle"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:gravity="center_vertical"
-            android:hint="제목"
-            android:maxLines="1"
-            app:layout_constraintBottom_toBottomOf="@id/diary_mapNpics_EditStart"
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/diary_mapNpics_ReadHead"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_EditStart"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/diary_mapNpics_ReadBody">
+            <TextView
+                android:id="@+id/diary_mapNpics_ReadTitle"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:hint="제목"
+                android:maxLines="1"
+                android:layout_marginLeft="20dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/diary_mapNpics_EditStart"
+                />
 
-        <Button
-            android:id="@+id/diary_mapNpics_EditStart"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:onClick="diary_onEditClick"
-            android:text="수정"
-            app:layout_constraintLeft_toRightOf="@id/diary_mapNpics_ReadTitle"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <ImageButton
+                android:id="@+id/diary_mapNpics_EditStart"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:onClick="diary_onEditClick"
+                android:src="@drawable/pen"
+                android:scaleType="fitCenter"
+                android:padding="5dp"
+                android:background="#00000000"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintLeft_toRightOf="@id/diary_mapNpics_ReadTitle"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+        </android.support.constraint.ConstraintLayout>
+
 
         <TextView
             android:id="@+id/diary_mapNpics_ReadBody"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:hint="내용"
+            android:layout_marginHorizontal="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_ReadTitle" />
+            app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_ReadHead" />
 
 
     </android.support.constraint.ConstraintLayout>
