--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -52,23 +52,19 @@
         android:id="@+id/diary_main_ImageList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar">
-
-    </kr.ac.kw.coms.globealbum.album.GroupDiaryView>
+        app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar"/>
 
     <kr.ac.kw.coms.globealbum.album.GroupDiaryView
         android:id="@+id/diary_main_JourneyList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar">
-
-    </kr.ac.kw.coms.globealbum.album.GroupDiaryView>
+        app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar"/>
 
     <kr.ac.kw.coms.globealbum.album.GroupDiaryView
         android:id="@+id/diary_main_Otherlist"
@@ -77,8 +73,6 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar">
-
-    </kr.ac.kw.coms.globealbum.album.GroupDiaryView>
+        app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar"/>
 
 </android.support.constraint.ConstraintLayout>
