--- a/app/src/main/res/layout/activity_diary_map_n_pictures.xml
+++ b/app/src/main/res/layout/activity_diary_map_n_pictures.xml
@@ -19,16 +19,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title"
-            android:textSize="20dp"
+            android:textSize="20pt"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"/>
-        <kr.ac.kw.coms.globealbum.map.MyMapView
-            android:id="@+id/diary_mapNpics_Map"
+        <FrameLayout
+            android:id="@+id/diary_mapNpics_Map_Outer"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Title"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:padding="10dp">
+            <kr.ac.kw.coms.globealbum.map.MyMapView
+                android:id="@+id/diary_mapNpics_Map"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </FrameLayout>
+
     </android.support.constraint.ConstraintLayout>
 
 
@@ -48,7 +55,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:visibility="gone"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Pics"
         app:layout_constraintHeight_percent="0.35"
         app:layout_constraintLeft_toLeftOf="parent">
 
@@ -95,6 +105,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:visibility="visible"
+        app:layout_constraintTop_toBottomOf="@id/diary_mapNpics_Pics"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.35"
         app:layout_constraintLeft_toLeftOf="parent">
