--- a/app/src/main/res/layout/activity_navigator.xml
+++ b/app/src/main/res/layout/activity_navigator.xml
@@ -9,7 +9,9 @@
     <LinearLayout android:id="@+id/MapLayout"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
         <kr.ac.kw.coms.globealbum.map.MyMapView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -20,7 +22,8 @@
         android:layout_width="match_parent"
         android:layout_height="10dp"
         android:background="@color/colorPrimaryDark"
-        app:layout_constraintTop_toBottomOf="@id/MapLayout">
+        app:layout_constraintTop_toBottomOf="@id/MapLayout"
+        app:layout_constraintLeft_toLeftOf="parent">
 
     </View>
 
