--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -1,61 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".diary.Diary_main">
-    <!-- 다이어리 메인 화면. 여행정보 목록 조회 -->
-    <RelativeLayout
-        android:id="@+id/diary_main_Toolbar"
+    tools:context=".diary.Diary_main"
+    android:id="@+id/diary_main_Root">
+
+
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
+        <!-- 다이어리 메인 화면. 여행정보 목록 조회 -->
+        <RelativeLayout
+            android:id="@+id/diary_main_Toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/arrow_left"
-            android:onClick="diary_onBackClick"/>
+            <ImageButton
+                android:id="@+id/diary_main_Back"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:onClick="diary_onBackClick"
+                android:scaleType="fitCenter"
+                android:src="@drawable/arrow_left" />
 
-        <RadioGroup
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:orientation="horizontal">
-
-            <RadioButton
-                android:id="@+id/diary_main_RadioLeft"
+            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="true"
-                android:onClick="diary_onRadioClick"
-                android:text="My" />
+                android:text="DRAWER"
+                android:layout_toRightOf="@id/diary_main_Back"
+                android:onClick="diary_openDrawer"/>
 
-            <RadioButton
-                android:id="@+id/diary_main_RadioRight"
+            <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="diary_onRadioClick"
-                android:text="Others" />
-        </RadioGroup>
-    </RelativeLayout>
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal">
 
-    <kr.ac.kw.coms.globealbum.album.GroupDiaryView
-        android:id="@+id/diary_main_ImageList"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar"/>
+                <RadioButton
+                    android:id="@+id/diary_main_RadioLeft"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:onClick="diary_onRadioClick"
+                    android:text="My" />
+
+                <RadioButton
+                    android:id="@+id/diary_main_RadioRight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="diary_onRadioClick"
+                    android:text="Others" />
+            </RadioGroup>
+        </RelativeLayout>
+
+        <kr.ac.kw.coms.globealbum.album.GroupDiaryView
+            android:id="@+id/diary_main_ImageList"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar" />
+
+                <kr.ac.kw.coms.globealbum.album.GroupDiaryView
+            android:id="@+id/diary_main_Otherlist"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <kr.ac.kw.coms.globealbum.album.GroupDiaryView
         android:id="@+id/diary_main_JourneyList"
@@ -63,16 +90,5 @@
         android:layout_height="0dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar"/>
-
-    <kr.ac.kw.coms.globealbum.album.GroupDiaryView
-        android:id="@+id/diary_main_Otherlist"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar"/>
-
-</android.support.constraint.ConstraintLayout>
+        app:layout_constraintLeft_toLeftOf="parent"/>
+</android.support.v4.widget.DrawerLayout>
