--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -32,13 +32,6 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/arrow_left" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="DRAWER"
-                android:layout_toRightOf="@id/diary_main_Back"
-                android:onClick="diary_openDrawer"/>
-
             <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -82,13 +75,22 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/diary_main_Toolbar" />
 
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:src="@drawable/arrow_left"
+            android:scaleType="fitXY"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:onClick="diary_openDrawer"/>
+
     </android.support.constraint.ConstraintLayout>
 
     <kr.ac.kw.coms.globealbum.album.GroupDiaryView
         android:id="@+id/diary_main_JourneyList"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        android:layout_gravity="left"/>
 </android.support.v4.widget.DrawerLayout>
