--- a/app/src/main/res/layout/activity_gallery_detail.xml
+++ b/app/src/main/res/layout/activity_gallery_detail.xml
@@ -25,6 +25,7 @@
                 android:background="#000000"
                 app:layout_constraintBottom_toTopOf="@id/gallerydetail_guideline"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
                 android:orientation="horizontal">
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/gallerydetail_btn_back"
@@ -45,6 +46,7 @@
                     android:gravity="center"
                     android:textColor="#FFFFFF"
                     android:textSize="20dp"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toRightOf="@id/gallerydetail_btn_back"
                     app:layout_constraintRight_toLeftOf="@id/gallerydetail_btn_detail"/>
                 <android.support.v7.widget.AppCompatImageView
@@ -70,6 +72,7 @@
                 android:id="@+id/gallerydetail_Image"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/gallerydetail_guideline"
                 app:layout_constraintBottom_toBottomOf="@id/gallerydetail_guidelineBottom"
                 android:background="#000000"
@@ -83,6 +86,7 @@
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/gallerydetail_guidelineBottom"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:background="#000000">
